Fix menu visibile for slide out navbar

--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -745,6 +745,9 @@ input[type="text"]:focus {
   .navbar .navbar__search .navbar__search-input {
     width: 12.5rem;
   }
+  .navbar .navbar-sidebar__items .navbar__item {
+    display: inline-block;
+  }
 }
 @media (max-width: 480px) {
   .navbar .navbar__brand {
